# notebooker

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: pythonpackage.yml
docker/: Dockerfile  docker-compose.yaml
docs/: conf.py  index.rst  report_execution.rst  setup.rst  templates.rst
docs/webapp/: urls.rst  webapp.rst
notebook_templates/: notebook_requirements.txt
notebooker/: __init__.py  _entrypoints.py  constants.py  convert_to_py.py  exceptions.py  execute_notebook.py  settings.py  snapshot.py
notebooker/nbtemplates/: notebook_preview.tpl  notebooker_html_output.tpl  notebooker_html_output_deprecated.tpl  notebooker_pdf_output.tplx
notebooker/notebook_templates_example/: README.md
notebooker/notebook_templates_example/local_context/: hello_module.py  local_read.py
notebooker/notebook_templates_example/other_folder/this one has spaces/: plot_random2.py
notebooker/notebook_templates_example/sample/: plot_random.py  plot_random_raw.ipynb  slideshow_test.py  test_plotly.py
notebooker/serialization/: __init__.py  mongo.py  serialization.py  serializers.py
notebooker/serializers/: pymongo.py
notebooker/utils/: caching.py  cleanup.py  conversion.py  filesystem.py  mail.py  notebook_execution.py  results.py  template_testing.py  templates.py  web.py
notebooker/web/: app.py  converters.py  handle_overrides.py  report_hunter.py  scheduler.py  utils.py
notebooker/web/config/: settings.py
notebooker/web/routes/: core.py  index.py  pending_results.py  prometheus.py  report_execution.py  run_report.py  scheduling.py  serve_results.py  templates.py
notebooker/web/static/: .eslintrc.yml  .prettierrc  gulpfile.js  jest.config.js  jest.setup.js  npm-shrinkwrap.json  package.json  semantic.json
notebooker/web/static/notebooker/: header.js  iframe_loading.js  index.js  loading.css  loading.css.map  loading.js  loading.scss  one_click_notebooks.css  result_listing.js  run_report.js  scheduler.js
notebooker/web/static/tests/: index.test.js
notebooker/web/templates/: header.html  index.html  loading.html  result_listing.html  results.html  run_report.html  scheduler.html
tests/: __init__.py  conftest.py  utils.py
tests/integration/: conftest.py  test_config.py  test_e2e.py  test_execute_notebook.py  test_handle_overrides.py  test_mongo.py  test_report_hunter.py  test_scheduling.py  test_template_testing.py  test_templates.py
tests/integration/utils/: test_conversion.py
tests/integration/web/: test_app.py  test_core_routes.py  test_run_report.py  test_scheduling.py
tests/integration/web/routes/: helpers.py  test_core.py
tests/regression/: test_execute_templates.py  test_execute_with_local_context.py
tests/regression/local_context/: hello.txt  hello_module.py  local_import.ipynb  local_read.py
tests/sanity/: test_template_sanity.py
tests/unit/: test_app.py  test_convert_day_of_week.py  test_execute_notebook.py  test_handle_overrides.py  test_run_report.py  test_snapshot.py
tests/unit/serialization/: test_mongo.py  test_mongoose.py
tests/unit/utils/: test_conversion.py  test_mail.py  test_results.py  test_template_testing.py  test_templates.py  test_utils_notebook_execution.py  test_utils_web.py
tests/unit/utils/templates/: cat1_nb.ipynb  cat2_nb.ipynb
tests/unit/utils/templates/subdir/: cat1_nb_subdir.ipynb  cat2_nb_subdir.ipynb  no_cat_nb_subdir.ipynb
