[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']

# Project Information - PEP 621 compliant
[project]
name = "Notebooker"
version = "0.6.2"   
description = """
Productionise and schedule your Jupyter Notebooks, just as interactively as you wrote them. 
Notebooker is a webapp which can execute and parametrise Jupyter Notebooks as soon as they have been 
committed to git. The results are stored in MongoDB and searchable via the web interface, essentially 
turning your Jupyter Notebook into a production-style web-based report in a few clicks.
"""
readme = "README.md"

# Authors of project:
authors = [
    { name = "Jon Bannister" },
    { name = "Douglas Bruce" },
    { name = "Franek Jemiolo" },
    { name = "Sam Ratcliff" },
    { name = "Matthew Dodds" },
    { name = "Dominik Christ" }
]
dependencies = ["pandas", "mongodb", "jupyter"]

license = { text = "MIT" }

# URLs should be inside [project] as "urls" subsection
[project.urls]
homepage = "https://notebooker.readthedocs.io/"
documentation = "https://notebooker.readthedocs.io/en/latest/"
source = "https://github.com/man-group/notebooker"
tracker = "https://github.com/man-group/notebooker/issues"