[metadata]
name = notebooker
author = Man Quant Technology
author_email = ManAlphaTech@man.com
description = Tool for parametrizing, executing, and displaying Jupyter Notebooks as reports.
long_description_content_type = text/markdown
license = AGPLv3
url = https://github.com/man-group/notebooker
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Framework :: Flask
    Framework :: IPython
    Framework :: Jupyter
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries

[flake8]
ignore = F401,E203,W504,W503
max-line-length = 160
exclude = tests/* notebooker/web/static/* notebooker/notebook_templates_example/*

[isort]
line_length=120
multi_line_output=3
known_third_party=jupytext,prometheus_client,pytest,freezegun